--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 
-<a href="https://art.logbook.bizml.ru/Offer-Calculator">Hello world!</a>
+<a href="https://drawing.logbook.bizml.ru/Offer-Calculator">Hello world!</a>
